--- a/safe_return.html
+++ b/safe_return.html
@@ -753,7 +753,7 @@ function runRecog(){
   // Call real Flask API after animation completes
   setTimeout(async ()=>{
     try{
-      const response = await fetch('http://127.0.0.1:5000/recognize',{
+      const response = await fetch('https://safe-return-api.onrender.com/recognize',{
         method:'POST',
         headers:{'Content-Type':'application/json'},
         body:JSON.stringify({image: report.photo})
